poke/testsuite/poke.pkl/struct-method-diag-7.pk
/* { dg-do compile } */

defun foo = void:
  {
    method bar = void: {} bar; /* { dg-error "method" } */
  }
